--- a/metadata.yml
+++ b/metadata.yml
@@ -1,7 +1,7 @@
 ---
-title: Seattle Community Network
-subtitle: Linux Introduction
-author: ["Esther Jang", "Matthew J. Harmon"]
+title: Linux Introduction
+subtitle: Seattle Community Network 
+author: ["Matthew J. Harmon"]
 rights: All Rights Reserved
 lang: en-US
 mainlang: english
